HelloUltraviolet/Fixtures/RejectedSource/Procedures/MainSignature/Source/Main.uv
//! Rejected executable specimen for an invalid main signature.

public procedure main() -> i32 {
    return 0
}
